--- a/src/api/appsettings.Development.json
+++ b/src/api/appsettings.Development.json
@@ -6,6 +6,12 @@
 		}
 	},
 	"ConnectionStrings": {
-		"NpgsqlConnection": "Host=localhost;Port=5432;Database=ims_service_db;Username=postgres;Password=123@admin"
+		"NpgsqlConnection": "Host=localhost;Port=5432;Database=ims_service_db;Username=postgres;Password=123@dmin"
+	},
+	"Jwt": {
+		"Secret": "public key",
+		"Issuer": "ims",
+		"Audience": "account",
+		"ExpirationInMinutes": 60
 	}
 }
