fix token provider, and some dto & entities for user management and its mapper

--- a/src/api/appsettings.Development.json
+++ b/src/api/appsettings.Development.json
@@ -9,7 +9,7 @@
 		"NpgsqlConnection": "Host=localhost;Port=5432;Database=ims_service_db;Username=postgres;Password=123@dmin"
 	},
 	"Jwt": {
-		"Secret": "public key",
+		"Secret": "kPj9Q9o7NRuWJ7Amgp6I3xwZB4L3yFq2yPkVuXrR0sU=",
 		"Issuer": "ims",
 		"Audience": "account",
 		"ExpirationInMinutes": 60
