--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,8 +19,8 @@ jobs:
         with:
           dotnet-version: 9.0.x
       - name: Restore dependencies
-        run: dotnet restore api.csproj
+        run: dotnet restore IMS.sln
         working-directory: src/api/
       - name: Build
-        run: dotnet build --no-restore
+        run: dotnet build IMS.sln --no-restore
         working-directory: src/api/
